--- a/css/queries.css
+++ b/css/queries.css
@@ -1,19 +1,3 @@
-/* I added this for 4k screens */
-/* TBD: check if this is needed */
-@media (min-width: 125em) {
-  .hero__container {
-    max-width: 160rem;
-  }
-
-  .container {
-    max-width: 160rem;
-  }
-
-  .testimonials-section {
-    padding: 0 19.2rem;
-  }
-}
-
 /* 1344px or less (Smaller Desktops) */
 @media (max-width: 84em) {
   .hero__container {
@@ -67,6 +51,7 @@
 }
 
 /* 960px or less (Tablets) */
+/* Switch to mobile nav */
 @media (max-width: 60em) {
   html {
     /* 8px / 16px */
@@ -83,6 +68,22 @@
 
     padding: 0 9.6rem;
     gap: 6.4rem;
+  }
+
+  .btn,
+  .btn:link,
+  .btn:visited {
+    padding: 2.4rem 4.8rem;
+  }
+
+  .hero__btns {
+    justify-content: center;
+  }
+
+  .hero__btns .btn,
+  .hero__btns .btn:link,
+  .hero__btns .btn:visited {
+    font-size: 2.2rem;
   }
 
   .hero__text-box,
@@ -107,6 +108,10 @@
     padding: 2.4rem 3.2rem;
   }
 
+  .featured__logos img {
+    height: 2.4rem;
+  }
+
   .testimonials-section {
     grid-template-columns: 1fr;
   }
@@ -127,8 +132,223 @@
     grid-template-columns: 1fr;
   }
 
+  .cta__img-box {
+    background-position-x: center;
+  }
+
   .btn--form {
     margin-top: 3.2rem;
+  }
+
+  /* MOBILE NAVIGATION */
+  .header__nav-btn {
+    display: block;
+  }
+  
+  .header__nav {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+
+    position: absolute;
+    top: 0;
+    left: 0;
+
+    width: 100%;
+    height: 100vh;
+
+    /* Make sure that the parent is relative and has overflow set to hidden */
+    transform: translateX(100%);
+    transition: all 0.5s ease-out;
+
+    /* Setting display to none doesn't allow animations or transitions */
+    opacity: 0;
+    pointer-events: none;
+    visibility: hidden;
+
+
+    background-color: rgba(255, 255, 255, 0.845);
+  }
+
+  .header__nav-list {
+    align-items: center;
+    flex-direction: column;
+    gap: 4.8rem;
+  }
+
+  .header__nav-link:link,
+  .header__nav-link:visited {
+    font-size: 3rem;
+  }
+
+  .nav-open .header__nav {
+    opacity: 1;
+    pointer-events: auto;
+    visibility: visible;
+    transform: translateX(0);
+  }
+
+  .nav-open .header__nav-icon[name="close-outline"] {
+    display: inline-block;
+  }
+
+  .nav-open .header__nav-icon[name="menu-outline"] {
+    display: none;
+  }
+}
+
+/* Width 768px or less (Small Tablets) */
+@media (max-width: 48em) {
+  .grid--3-cols,
+  .grid--4-cols {
+    grid-template-columns: repeat(2, 1fr);
+  }
+
+  .diets {
+    grid-column: 1 / -1;
+    justify-self: center;
+  }
+
+  .heading--secondary {
+    margin-bottom: 4.8rem;
+  }
+
+  .pricing-card {
+    width: 36rem;
+  }
+
+  .footer__grid {
+    grid-template-columns: repeat(6, 1fr);
+  }
+
+  .footer__nav-col {
+    grid-row: 1;
+    grid-column: span 2;
+    margin-bottom: 3.2rem;
+  }
+
+  .footer__logo-col {
+    grid-row: 2;
+    grid-column: span 2;
+  }
+
+  .footer__contacts-col {
+    grid-row: 2;
+    grid-column: span 4;
+  }
+}
+
+/* Width 640px or less (Phones) */
+@media (max-width: 40em) {
+  .grid {
+    row-gap: 4.8rem;
+  }
+
+  .grid--2-cols,
+  .grid--3-cols,
+  .grid--4-cols {
+    grid-template-columns: 1fr;
+  }
+
+  .btn,
+  .btn:link,
+  .btn:visited {
+    padding: 2.4rem 2.4rem;
+  }
+
+  .hero__img {
+    max-width: 80%;
+  }
+
+  .hero__btns {
+    align-items: center;
+    flex-direction: column;
+  }
+
+  .header {
+    padding-bottom: 4.8rem;
+  }
+
+  .hero__section {
+    padding-bottom: 4.8rem;
+  }
+
+  .hero__container {
+    padding: 0 2.4rem;
+  }
+
+  .featured__logos {
+    gap: 1.2rem;
+    /* flex-wrap: wrap; */
+  }
+
+  .featured__logos img {
+    height: 1.2rem;
+  }
+
+  .heading--subheading,
+  .heading--secondary {
+    text-align: center;
+  }
+
+  .how__section-header {
+    /* text-align: center; */
+    padding: 0 2.4rem;
+  }
+
+  .how__img-box:nth-child(2) {
+    grid-row: 1;
+  }
+
+  .how__img-box:nth-child(6) {
+    grid-row: 5;
+  }
+
+  .how__img-box {
+    margin-top: 6.4rem;
+  }
+
+  .meals-card {
+    justify-self: center;
+    max-width: 40rem;
+  }
+
+  .testimonials-container {
+    padding-bottom: 0;
+  }
+
+  .testimonials {
+    grid-template-columns: 1fr;
+  }
+
+  .gallery-container {
+    grid-template-columns: repeat(3, 1fr);
+  }
+
+  .gallery__item:last-of-type {
+    display: block;
+  }
+
+  .pricing-card {
+    justify-self: center;
+  }
+
+  .cta {
+    grid-template-columns: 1fr;
+  }
+
+  .cta__img-box {
+    grid-row: 1;
+    height: 32rem;
+    background-position-y: 25%;
+  }
+
+  .cta__text-box {
+    padding: 4.8rem 3.2rem;
+  }
+
+  .footer__logo .header__logo {
+    height: 1.8rem;
   }
 }
 
