--- a/css/queries.css
+++ b/css/queries.css
@@ -159,7 +159,7 @@
 
     /* Make sure that the parent is relative and has overflow set to hidden */
     transform: translateX(100%);
-    transition: all 0.3s ease-out;
+    transition: all 0.3s ease-in;
 
     /* Setting display to none doesn't allow animations or transitions */
     opacity: 0;
@@ -167,7 +167,7 @@
     visibility: hidden;
 
 
-    background-color: rgba(255, 255, 255, 0.845);
+    background-color: rgba(255, 255, 255, 0.95);
   }
 
   .header__nav-list {
