--- a/css/style.css
+++ b/css/style.css
@@ -51,7 +51,7 @@ html {
   /* This is needed for mobile nav to be hidden */
   overflow-x: hidden;
 
-  scroll-behavior: smooth;
+  /* scroll-behavior: smooth; */
 }
 
 body {
@@ -229,9 +229,12 @@ body {
 
 .header {
   display: flex;
-  justify-content: space-between;
+  /* Because we want header to be fixed later */
+  height: 9.6rem;
+  padding: 0 4.8rem;
   align-items: center;
-  padding: 3.2rem 4.8rem 8rem;
+  justify-content: space-between;
+
   background-color: var(--bg-color);
   /* This is needed for mobile navigation to be positioned absolute to the header */
   position: relative;
@@ -297,6 +300,24 @@ body {
   display: none;
 }
 
+/* FIXED NAVIGATION */
+.fixed .header {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 8rem;
+  padding-top: 0;
+  padding-bottom: 0;
+  background-color: rgba(255, 255, 255,0.97);
+  z-index: 999;
+  box-shadow: 0 1.2rem 3.2rem rgba(0, 0, 0, 0.03);
+}
+
+.fixed .hero__section {
+  /* It needs to be the same as height of the header */
+  margin-top: 9.6rem;
+}
 
 /* HERO */
 
@@ -433,16 +454,6 @@ body {
 
 .how__img {
   max-width: 38%;
-  transition: all 0.5s;
-}
-
-.how__img:hover {
-  transform: scale(1.03, 1.03);
-}
-
-.how__img:hover {
-  content: 'HELLLLO THERE';
-  font-size: 20rem;
 }
 
 /* MEALS SECTION */
