--- a/css/styles.css
+++ b/css/styles.css
@@ -290,13 +290,13 @@ body {
 .header__nav-icon {
   width: 100%;
   height: 100%;
-  color: var(--text-color-heading)
+  color: var(--text-color-heading);
 }
 
-.header__nav-icon[name="menu-outline"] {
+.header__nav-icon[name='menu-outline'] {
 }
 
-.header__nav-icon[name="close-outline"] {
+.header__nav-icon[name='close-outline'] {
   display: none;
 }
 
@@ -309,7 +309,7 @@ body {
   height: 8rem;
   padding-top: 0;
   padding-bottom: 0;
-  background-color: rgba(255, 255, 255,0.97);
+  background-color: rgba(255, 255, 255, 0.97);
   z-index: 999;
   box-shadow: 0 1.2rem 3.2rem rgba(0, 0, 0, 0.03);
 }
@@ -332,6 +332,7 @@ body {
   max-width: 130rem;
   padding: 0 3.2rem;
   align-items: center;
+  column-gap: 2.4rem;
 }
 
 .hero__description {
@@ -376,6 +377,7 @@ body {
 
 .hero__img {
   max-width: 100%;
+  height: auto;
 }
 
 /* FEATURED */
@@ -454,6 +456,7 @@ body {
 
 .how__img {
   max-width: 38%;
+  height: auto;
 }
 
 /* MEALS SECTION */
