--- a/css/queries.css
+++ b/css/queries.css
@@ -195,6 +195,10 @@
   .nav-open .header__nav-icon[name='menu-outline'] {
     display: none;
   }
+
+  html.nav-open {
+    overflow-y: hidden;
+  }
 }
 
 /* Width 768px or less (Small Tablets) */
